--- a/style.css
+++ b/style.css
@@ -10,13 +10,16 @@ Tags: html5,child theme,responsive,bootstrap
 Template: terra
 */
 
-/* ~~~~~~ Main ~~~~~~ */
+/* Main ~~~~> */
+/* Header ~~~~> */
+/* Nav ~~~~> */
+/* Home ~~~~> */
+/* Content ~~~~> */
+/* Sidebar ~~~~> */
+/* Footer ~~~~> */
 
-/* ~~~~~~ Header ~~~~~~ */
-
-/* ~~~~~~ Nav ~~~~~~ */
-
-/* ~~~~~~ Nav Customization, remove for default Bootstrap ~~~~~~ */
+/* Nav ~~~~> */
+/* Quick Customization - Remove for default Bootstrap >~~~~~~~~> */
 .ter-navbar,.ter-navbar .slide-collapse{background:#f8f8f8}/* Nav BG */
 .ter-navbar .navbar-nav li{font-size:16px}/* Container font size */
 .ter-navbar .navbar-nav > li.level-0 > a{font-size:1.2em; padding:10px 15px 10px 15px}/* Level-0 */
@@ -33,43 +36,18 @@ Template: terra
 #page .ter-navbar .navbar-nav  li > a:hover,.ter-navbar .navbar-nav  li > a:focus{color:#333}/* Link hover highlighting */	
 .ter-navbar .navbar-nav > .open > a,.ter-navbar .navbar-nav > .open > a:hover,.ter-navbar .navbar-nav > .open > a:focus{background:#e6e6e6; color:#333}/* Dropdown Link Highlighting */
 .ter-navbar .navbar-nav .open .dropdown-menu > .active > a,.ter-navbar .navbar-nav .open .dropdown-menu > .active > a:hover,.ter-navbar .navbar-nav .open .dropdown-menu > .active > a:focus,.ter-navbar .navbar-nav .current-menu-item > a{background:#f9f9f9; color:#333}/* Current highlighting */
+/* <~~~~~~~~< END Quick Customization */
 
-/* ~~~~~~ Home ~~~~~~ */
-
-/* ~~~~~~ Content ~~~~~~ */
-
-/* ~~~~~~ Sidebar ~~~~~~ */
-
-/* ~~~~~~ Footer ~~~~~~ */
+/* Footer ~~~~> */
 #colophon .footer-nav-row a{transition:color .4s; -webkit-transition:color .4s}
 
-
-/* ~~~~~~~~~~~~ Min Width Media Queries ~~~~~~~~~~~~ */
-
+/* Min Width Media Queries >~~~~~~~~> */
 @media (min-width: 480px){
-	/* ~~~~~~ Main ~~~~~~ */
-
-	/* ~~~~~~ Header ~~~~~~ */
 	
-	/* ~~~~~~ Nav ~~~~~~ */
-	
-	/* ~~~~~~ Home ~~~~~~ */
-	
-	/* ~~~~~~ Content ~~~~~~ */
-	
-	/* ~~~~~~ Sidebar ~~~~~~ */
-	
-	/* ~~~~~~ Footer ~~~~~~ */
 }
 
 @media (min-width: 768px){
-	/* ~~~~~~ Main ~~~~~~ */
-
-	/* ~~~~~~ Header ~~~~~~ */
-	
-	/* ~~~~~~ Nav ~~~~~~ */
-	
-	/* ~~~~~~ Nav Customization, remove for default Bootstrap ~~~~~~ */
+	/* Quick Customization - Remove for default Bootstrap >~~~~~~~~> */
 	.dropdown-menu{min-width:200px}
 	.ter-navbar .navbar-nav li{font-size:14px}/* Container font size */
 	.ter-navbar .navbar-nav li.level-0 > a{padding:15px 18px}/* Level-0 padding */
@@ -82,111 +60,32 @@ Template: terra
 	.ter-navbar .navbar-nav .sub-menu{margin-bottom:6px; padding-bottom:6px; border-bottom:1px solid #eee; background:#fff}/* Sub menu Styling */
 	.ter-navbar .navbar-nav .sub-menu.level-3{border-bottom:1px solid #f8f8f8}/* Level-3 sub menu styling */
 	.ter-navbar .sub-menu.level-2{padding-left:25px}/* Level-2 Ul Padding */
-	.ter-navbar .sub-menu.level-3{padding-left:20px}/* Level-3 Ul Padding */	
-	
-	/* ~~~~~~ Home ~~~~~~ */
-	
-	/* ~~~~~~ Content ~~~~~~ */
-	
-	/* ~~~~~~ Sidebar ~~~~~~ */
-	
-	/* ~~~~~~ Footer ~~~~~~ */
+	.ter-navbar .sub-menu.level-3{padding-left:20px}/* Level-3 Ul Padding */
+	/* <~~~~~~~~< END Quick Customization */	
 }
 
 @media (min-width: 992px){
-	/* ~~~~~~ Main ~~~~~~ */
 
-	/* ~~~~~~ Header ~~~~~~ */
-	
-	/* ~~~~~~ Nav ~~~~~~ */
-	
-	/* ~~~~~~ Home ~~~~~~ */
-	
-	/* ~~~~~~ Content ~~~~~~ */
-	
-	/* ~~~~~~ Sidebar ~~~~~~ */
-	
-	/* ~~~~~~ Footer ~~~~~~ */
 }
 
 @media (min-width: 1200px){
-	/* ~~~~~~ Main ~~~~~~ */
-	
-	/* ~~~~~~ Header ~~~~~~ */
-	
-	/* ~~~~~~ Nav ~~~~~~ */
-	
-	/* ~~~~~~ Home ~~~~~~ */
-	
-	/* ~~~~~~ Content ~~~~~~ */
-	
-	/* ~~~~~~ Sidebar ~~~~~~ */
-	
-	/* ~~~~~~ Footer ~~~~~~ */
+
 }
+/* <~~~~~~~~< END Min Width Media Queries */
 
-/* ~~~~~~~~~~~~ Max Width Media Queries ~~~~~~~~~~~~ */
-
+/* Max Width Media Queries >~~~~~~~~> */
 @media (max-width: 1199px){
-	/* ~~~~~~ Main ~~~~~~ */
-	
-	/* ~~~~~~ Header ~~~~~~ */
-	
-	/* ~~~~~~ Nav ~~~~~~ */
-	
-	/* ~~~~~~ Home ~~~~~~ */
-	
-	/* ~~~~~~ Content ~~~~~~ */
-	
-	/* ~~~~~~ Sidebar ~~~~~~ */
-	
-	/* ~~~~~~ Footer ~~~~~~ */
+
 }
 
 @media (max-width: 991px){
-	/* ~~~~~~ Main ~~~~~~ */
-	
-	/* ~~~~~~ Header ~~~~~~ */
-	
-	/* ~~~~~~ Nav ~~~~~~ */
-	
-	/* ~~~~~~ Home ~~~~~~ */
-	
-	/* ~~~~~~ Content ~~~~~~ */
-	
-	/* ~~~~~~ Sidebar ~~~~~~ */
-	
-	/* ~~~~~~ Footer ~~~~~~ */	
+
 }
 
 @media (max-width: 767px){
-	/* ~~~~~~ Main ~~~~~~ */
 
-	/* ~~~~~~ Header ~~~~~~ */
-	
-	/* ~~~~~~ Nav ~~~~~~ */
-	
-	/* ~~~~~~ Home ~~~~~~ */
-	
-	/* ~~~~~~ Content ~~~~~~ */
-	
-	/* ~~~~~~ Sidebar ~~~~~~ */
-	
-	/* ~~~~~~ Footer ~~~~~~ */
 }
 
 @media (max-width: 479px){
-	/* ~~~~~~ Main ~~~~~~ */
 
-	/* ~~~~~~ Header ~~~~~~ */
-	
-	/* ~~~~~~ Nav ~~~~~~ */
-	
-	/* ~~~~~~ Home ~~~~~~ */
-	
-	/* ~~~~~~ Content ~~~~~~ */
-	
-	/* ~~~~~~ Sidebar ~~~~~~ */
-	
-	/* ~~~~~~ Footer ~~~~~~ */
 }
