--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ Author URI: http://hyperspatial.com
 Description: A Terra Theme Child
 Version: 3.3.0.4
 License: GNU General Public License
-Tags: html5,child theme,responsive,bootstrap
+Tags: html5,child theme,responsive,bootstrap,awesome
 Template: terra
 */
 
